examples/test/testpolicy19290.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19290
  namespace: namespace325
spec:
  podSelector:
    matchLabels:
      key49: value26
      key7: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value44
          key22: value4
          key45: value45
      podSelector:
        matchLabels:
          key25: value32
          key13: value49
          key4: value4
